<resources>
    <string name="app_name">Here!</string>

    <string name="camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>

    <!-- Login -->
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Login</string>
    <string name="button_signup">Sign Up</string>
    <string name="error_password">Password must contain at least 8 characters.</string>

    <!-- Menu Labels -->
    <string name="course1_label">Course 1</string>
    <string name="course2_label">Course 2</string>
    <string name="course3_label">Course 3</string>
    <string name="course4_label">Course 4</string>
    <string name="settings_label">Settings</string>
    <string name="logout_label">Logout</string>

    <!-- Folder icon on Menu -->
    <string name="folder_title">Folder</string>

</resources>
